--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "bcrypt": "^4.0.1",
     "chalk": "^3.0.0",
     "cottage": "^3.1.3",
+    "glob": "^7.1.6",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.13",
     "koa": "^2.11.0",
+    "koa-bodyparser": "^4.3.0",
     "koa-send": "^5.0.0",
     "pg": "^8.0.0"
   },
@@ -27,7 +29,9 @@
     "start:server": "node bin/server.js",
     "start:worker": "node bin/worker.js",
     "start:worker:prod": "NODE_ENV=production node bin/worker.js",
-    "start:worker:staging": "NODE_ENV=staging node bin/worker.js"
+    "start:worker:staging": "NODE_ENV=staging node bin/worker.js",
+    "db:migrate": "npx knex migrate:latest",
+    "db:rollback": "npx knex migrate:rollback"
   },
   "husky": {
     "hooks": {
