--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "bin/server.js",
   "dependencies": {
+    "@koa/cors": "^2.2.3",
     "bcrypt": "^4.0.1",
     "chalk": "^3.0.0",
     "cottage": "^3.1.3",
