--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^4.0.1",
     "chalk": "^3.0.0",
     "cottage": "^3.1.3",
+    "crypto-random-string": "^3.2.0",
     "glob": "^7.1.6",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.13",
